# PyFixedReps

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: benchmark.yml  pr-benchmark.yml  publish.yml  tag.yml  test.yml
PyFixedReps/: BaseRepresentation.py  RBF.py  TileCoder.py  __init__.py  _jit.py
dev/bench/: data.js
scripts/: publish.sh  run_tests.sh
src/: lib.rs  tc.rs
tests/: test_RBF.py  test_TileCoder.py
typings/PyFixedReps/rust/: __init__.pyi
typings/numba/: __init__.pyi
