[package]
name = "PyFixedReps-andnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "PyFixedReps"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
hashbrown = { version = "0.15.1", features = ["serde"] }
ndarray = { version = "0.16.1", features = ["serde"] }
numpy = "0.20.0"
pyo3 = { version = "0.20.3", features = ["extension-module", "generate-import-lib"] }
serde = { version = "1.0.214", features = ["derive"] }
