[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "4.1.2"
tag_format = "$version"
version_files = ["pyproject.toml", "README.md"]

[tool.pyright]
include = ['src']
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'
useLibraryCodeForTypes = true

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "PyFixedReps.rust"

[project]
name = "PyFixedReps-andnp"
version = "4.1.2"
description = ""
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = [
    "numpy>=1.23,<3.0",
    "numba~=0.56",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "pip",
    "ruff",
    "pyright",
    "commitizen",
    "pre-commit",
    "pytest>=7.3,<9.0",
    "pytest-benchmark>=4,<6",
    "maturin>=1.4,<1.8",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"
